Bug 1355374 - Use the AsyncDragMetrics to communicate the scroll thumb length to APZ. r=mstange

MozReview-Commit-ID: DJUKr4s9nWQ